hard-gists/5574345/run.log
=== Docker Run Log for 5574345 ===
Started at: Mi 29. Okt 15:45:34 CET 2025

[2025-10-29 15:45:34] START: Running container for 5574345
[2025-10-29 15:45:34] SUCCESS: Container 558a9d5beb191a7b7b07abd0202d6676a1556fd55ca4494b6fc48b089ebeff8a started for 5574345
=== Container logs for 5574345 ===
  File "/snippet.py", line 32
    print "Applying a learning algorithm..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5574345 ===
[2025-10-29 15:45:36] INFO: Container 558a9d5beb191a7b7b07abd0202d6676a1556fd55ca4494b6fc48b089ebeff8a has stopped
